deploy/prod/ui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: etherface-ui
spec:
  selector:
    app: etherface
    component: ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
